# pure-rust-locales

./: .gitattributes  Cargo.toml  README.md  build.rs
.github/workflows/: pr.yml
generate-api/: Cargo.toml
generate-api/src/: generator.rs  main.rs  parser.rs
src/: lib.rs  types.rs
tests/: checksum.rs  macros.rs  simple_test.rs
