[package]
name = "pure-rust-locales"
version = "0.5.0"
authors = ["Cecile Tonglet <cecile.tonglet@cecton.com>"]
description = "Pure Rust locales imported directly from the GNU C Library. `LC_COLLATE` and `LC_CTYPE` are not yet supported."
license = "MIT"
repository = "https://github.com/cecton/pure-rust-locales"
homepage = "https://github.com/cecton/pure-rust-locales"
documentation = "https://docs.rs/pure-rust-locales"
readme = "README.md"
keywords = ["locale", "libc", "i18n", "internationalisation", "no_std"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
nom = "5.0"
itertools = "0.8"
